--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.4.4"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17"
   }
 }
